added more styles in assets/styles.css and also added styles in assets/utilities.css

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ rel="stylesheet">
         </div>
     </header>
     <div class="hero flex items-center justify-between">
-        <div class="left flex-1 justify-center" id="profile-pic">
+        <div class="left flex-1 justify-center">
             <img src="images/profile.jpg" alt="profile picture">
         </div>
         <div class="right flex-1">
