--- a/about.html
+++ b/about.html
@@ -8,11 +8,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700&family=Poppins:wght@200&display=swap"
 rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="shortcut icon" href="images/head-icon.jpeg" type="image/x-icon">
     <title>Portfolio</title>
 </head>
-<body>
+<body style="background: white; color: black;">
     <header>
         <div class="container">
             <nav class="flex items-center justify-between">
@@ -34,18 +34,23 @@ rel="stylesheet">
             </nav>
         </div>
     </header>
-    <div class="hero flex items-center justify-between">
-        <div class="left flex-1 justify-center">
-            <img src="images/profile.jpg" alt="profile picture">
-        </div>
-        <div class="right flex-1">
-            <h6>ROBERT SSEKYENE</h6>
-            <h1>I'm a Web<br> <span>Developer</span></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, consequatur atque sed rem nam sunt! Iure tempora deleniti, assumenda dolorum nostrum quos, beatae, quasi quis blanditiis quaerat quod. Labore, libero.</p>
-            <div>
-                <button class="btn btn-secondary">DOWNLOAD CV</button>
+    <section class="about">
+        <div class="container flex items-centre">
+            <div class="left flex-1 justify-right">
+                <img src="images/profile2.jpg" height="400px" alt="about profile pic">
+            </div>
+            <div class="right flex-1">
+                <h1>About <span>Me</span></h1>
+                <h3>Hello! I'm Ssekyene Robert.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, est facilis, consectetur velit nulla explicabo, dicta voluptates illum et suscipit recusandae obcaecati ad modi! Tenetur ipsam, mollitia pariatur nostrum nobis incidunt dolores consequuntur recusandae voluptas ullam atque exercitationem similique delectus.</p>
+                <div class="socials" >
+                <a href=""><img src="images/website.png" alt="website link" width="40px"></a>
+                <a href=""><img src="images/facebook.png" alt="facebook link" width="40px"></a>
+                <a href=""><img src="images/instagram.png" alt="instagram link" width="40px"></a>
+                <a href=""><img src="images/youtube.png" alt="youtube link" width="40px"></a>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
 </body>
 </html>
