designed the services page

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="shortcut icon" href="images/head-icon.jpeg" type="image/x-icon">
-    <title>Portfolio</title>
+    <title>Portfolio | About</title>
 </head>
 <body style="background: white; color: black;">
     <header>
@@ -23,7 +23,7 @@ rel="stylesheet">
                     <div>
                         <a href="./index.html">Home</a>
                         <a href="./about.html">About</a>
-                        <a href="#">Services</a>
+                        <a href="./services.html">Services</a>
                         <a href="#">Blog</a>
                         <a href="#">More</a>
                     </div>
