--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@
 rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
 <link rel="shortcut icon" href="images/head-icon.jpeg" type="image/x-icon">
-    <title>Portfolio | Home</title>
+    <title>Portfolio | Services</title>
 </head>
 <body style="background: rgb(17, 17, 17);">
     <header>
@@ -34,18 +34,26 @@ rel="stylesheet">
             </nav>
         </div>
     </header>
-    <div class="hero flex items-center justify-between">
-        <div class="left flex-1 justify-center">
-            <img src="images/profile.jpg" alt="profile picture">
-        </div>
-        <div class="right flex-1">
-            <h6>ROBERT SSEKYENE</h6>
-            <h1>I'm a Web<br> <span>Developer</span></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, consequatur atque sed rem nam sunt! Iure tempora deleniti, assumenda dolorum nostrum quos, beatae, quasi quis blanditiis quaerat quod. Labore, libero.</p>
-            <div>
-                <button class="btn btn-secondary">DOWNLOAD CV</button>
+    <section class="services">
+        <div class="container">
+            <h1 class="services-head">Services</h1>
+            <p>All your digital needs... covered.</p>
+            <div class="card-grid">
+                <div class="card">
+                    <img src="images/graphics.png" alt="graphic designer icon">
+                    <h2>Graphic Design</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus veritatis debitis dolor! Asperiores adipisci quasi praesentium assumenda qui in tenetur.</p>
+                </div>
+                <div class="card">
+                    <img src="images/www.png" alt="web developer icon">
+                    <h2>Web development</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus veritatis debitis dolor! Asperiores adipisci quasi praesentium assumenda qui in tenetur.</p>
+                </div>
+                <div class="card">
+                    <img src="images/blogger.png" alt="blogger icon">
+                    <h2>Content Writing</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus veritatis debitis dolor! Asperiores adipisci quasi praesentium assumenda qui in tenetur.</p>
+                </div>
             </div>
         </div>
-    </div>
-</body>
-</html>
+    </section>
