--- a/index.html
+++ b/index.html
@@ -6,46 +6,49 @@
     <link rel="stylesheet" href="assets/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700&family=Poppins:wght@200&display=swap"
-rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
-<link rel="shortcut icon" href="images/head-icon.jpeg" type="image/x-icon">
+    
+    <link rel="shortcut icon" href="images/head-icon.jpeg" type="image/x-icon">
     <title>Portfolio | Home</title>
 </head>
 <body style="background: rgb(17, 17, 17);">
     <header>
         <div class="container">
+            
             <nav class="flex items-center justify-between">
-                <div class="left flex justify-right">
-                    <div class="logo">
-                        <img src="images/logo.jpg" alt="logo">
-                    </div>
-                    <div>
-                        <a href="./index.html">Home</a>
-                        <a href="./about.html">About</a>
-                        <a href="./services.html">Services</a>
-                        <a href="#">Blog</a>
-                        <a href="#">More</a>
-                    </div>
+                <div class="logo">
+                    <img src="images/logo.jpg" alt="logo">
                 </div>
-                <div class="right">
-                    <button class="btn btn-primary">Contact</button>
+                <div class="menu-icon">
+                    <span>&#9776;</span>
+                </div>
+                <div class="nav-items flex flex-1 items-center">
+                    <div class="left flex flex-1">
+                            <a href="./index.html">Home</a>
+                            <a href="./about.html">About</a>
+                            <a href="./services.html">Services</a>
+                            <a href="#">Blog</a>
+                    </div>
+                    <div class="right">
+                        <button class="btn btn-primary">Contact</button>
+                    </div>
                 </div>
             </nav>
         </div>
     </header>
-    <div class="hero flex items-center justify-between">
+    <div class="container hero flex items-center justify-between">
         <div class="left flex-1 justify-center">
             <img src="images/profile.jpg" alt="profile picture">
         </div>
         <div class="right flex-1">
             <h6>ROBERT SSEKYENE</h6>
             <h1>I'm a Web<br> <span>Developer</span></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, consequatur atque sed rem nam sunt! Iure tempora deleniti, assumenda dolorum nostrum quos, beatae, quasi quis blanditiis quaerat quod. Labore, libero.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, consequatur atque sed rem nam beatae, quasi quis blanditiis quaerat quod. Labore, libero.</p>
             <div>
                 <button class="btn btn-secondary">DOWNLOAD CV</button>
             </div>
         </div>
     </div>
+
+    <script src="assets/script.js"></script>
 </body>
 </html>
