--- a/about.html
+++ b/about.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700&family=Poppins:wght@200&display=swap"
-rel="stylesheet">
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="shortcut icon" href="images/head-icon.jpeg" type="image/x-icon">
-    <title>Portfolio | About</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="assets/styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        
+        <link rel="shortcut icon" href="images/head-icon.jpeg" type="image/x-icon">
+        <title>Portfolio | Home</title>
+    </head>
 <body style="background: white; color: black;">
     <header>
         <div class="container">
+            
             <nav class="flex items-center justify-between">
-                <div class="left flex justify-right">
-                    <div class="logo">
-                        <img src="images/logo.jpg" alt="logo">
-                    </div>
-                    <div>
-                        <a href="./index.html">Home</a>
-                        <a href="./about.html">About</a>
-                        <a href="./services.html">Services</a>
-                        <a href="#">Blog</a>
-                        <a href="#">More</a>
-                    </div>
+                <div class="logo">
+                    <img src="images/logo.jpg" alt="logo">
                 </div>
-                <div class="right">
-                    <button class="btn btn-primary">Contact</button>
+                <div class="menu-icon">
+                    <span>&#9776;</span>
+                </div>
+                <div class="nav-items flex flex-1 items-center">
+                    <div class="left flex flex-1">
+                            <a href="./index.html">Home</a>
+                            <a href="./about.html">About</a>
+                            <a href="./services.html">Services</a>
+                            <a href="#">Blog</a>
+                    </div>
+                    <div class="right">
+                        <button class="btn btn-primary">Contact</button>
+                    </div>
                 </div>
             </nav>
         </div>
@@ -52,5 +53,6 @@ rel="stylesheet">
             </div>
         </div>
     </section>
+    <script src="assets/script.js"></script>
 </body>
 </html>
