--- a/about.html
+++ b/about.html
@@ -36,19 +36,19 @@
         </div>
     </header>
     <section class="about">
-        <div class="container flex items-centre">
-            <div class="left flex-1 justify-right">
+        <div class="container hero flex items-centre">
+            <div class="left justify-between">
                 <img src="images/profile2.jpg" height="400px" alt="about profile pic">
             </div>
             <div class="right flex-1">
                 <h1>About <span>Me</span></h1>
                 <h3>Hello! I'm Ssekyene Robert.</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, est facilis, consectetur velit nulla explicabo, dicta voluptates illum et suscipit recusandae obcaecati ad modi! Tenetur ipsam, mollitia pariatur nostrum nobis incidunt dolores consequuntur recusandae voluptas ullam atque exercitationem similique delectus.</p>
-                <div class="socials" >
-                <a href=""><img src="images/website.png" alt="website link" width="40px"></a>
-                <a href=""><img src="images/facebook.png" alt="facebook link" width="40px"></a>
-                <a href=""><img src="images/instagram.png" alt="instagram link" width="40px"></a>
-                <a href=""><img src="images/youtube.png" alt="youtube link" width="40px"></a>
+                <div class="socials flex justify-between items-centre" >
+                <a href=""><img src="images/github.png" alt="website link" width="25px"></a>
+                <a href=""><img src="images/linkedin.png" alt="facebook link" width="25px"></a>
+                <a href=""><img src="images/twitter-alt.png" alt="instagram link" width="25px"></a>
+                <a href=""><img src="images/facebook.png" alt="youtube link" width="25px"></a>
                 </div>
             </div>
         </div>
