made page responsive

--- a/services.html
+++ b/services.html
@@ -36,10 +36,10 @@
         </div>
     </header>
     <section class="services">
-        <div class="container">
+        <div class="container" id="service-ctn">
             <h1 class="services-head">Services</h1>
             <p>All your digital needs... covered.</p>
-            <div class="card-grid">
+            <div class="card-ctn flex">
                 <div class="card">
                     <img src="images/graphics.png" alt="graphic designer icon">
                     <h2>Graphic Design</h2>
