--- a/about.html
+++ b/about.html
@@ -38,9 +38,9 @@
     <section class="about">
         <div class="container hero flex items-centre">
             <div class="left justify-between">
-                <img src="images/profile2.jpg" height="400px" alt="about profile pic">
+                <img src="images/profile2.jpg" id="abt-pic"  height="400px;" alt="about profile pic">
             </div>
-            <div class="right flex-1">
+            <div class="right">
                 <h1>About <span>Me</span></h1>
                 <h3>Hello! I'm Ssekyene Robert.</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, est facilis, consectetur velit nulla explicabo, dicta voluptates illum et suscipit recusandae obcaecati ad modi! Tenetur ipsam, mollitia pariatur nostrum nobis incidunt dolores consequuntur recusandae voluptas ullam atque exercitationem similique delectus.</p>
