fixed page titles

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         
         <link rel="shortcut icon" href="images/head-icon.jpeg" type="image/x-icon">
-        <title>Portfolio | Home</title>
+        <title>Portfolio | About</title>
     </head>
 <body style="background: white; color: black;">
     <header>
