--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h1>I'm a Web<br> <span>Developer</span></h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, consequatur atque sed rem nam beatae, quasi quis blanditiis quaerat quod. Labore, libero.</p>
             <div>
-                <button class="btn btn-secondary">DOWNLOAD CV</button>
+                <button class="btn btn-secondary">DOWNLOAD RESUME</button>
             </div>
         </div>
     </div>
