--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         
         <link rel="shortcut icon" href="images/head-icon.jpeg" type="image/x-icon">
-        <title>Portfolio | Home</title>
+        <title>Portfolio | Services</title>
     </head>
 <body style="background: rgb(17, 17, 17);">
     <header>
