added blog page

--- a/about.html
+++ b/about.html
@@ -23,10 +23,10 @@
                 </div>
                 <div class="nav-items flex flex-1 items-center">
                     <div class="left flex flex-1">
-                            <a href="./index.html">Home</a>
-                            <a href="./about.html">About</a>
-                            <a href="./services.html">Services</a>
-                            <a href="#">Blog</a>
+                        <a href="./index.html" class="nav-link">Home</a>
+                        <a href="./about.html" class="nav-link">About</a>
+                        <a href="./services.html" class="nav-link">Services</a>
+                        <a href="./blog.html" class="nav-link">Blog</a>
                     </div>
                     <div class="right">
                         <button class="btn btn-primary">Contact</button>
