--- a/blog.html
+++ b/blog.html
@@ -8,9 +8,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         
         <link rel="shortcut icon" href="images/head-icon.jpeg" type="image/x-icon">
-        <title>Portfolio | Services</title>
+        <title>Portfolio | Blog</title>
     </head>
-<body style="background: rgb(17, 17, 17);">
+<body style="background: white; color: black;">
     <header>
         <div class="container">
             
@@ -35,29 +35,19 @@
             </nav>
         </div>
     </header>
-    <section class="services">
-        <div class="container" id="service-ctn">
-            <h1 class="services-head">Services</h1>
-            <p>All your digital needs... covered.</p>
-            <div class="card-ctn flex">
-                <div class="card">
-                    <img src="images/graphics.png" alt="graphic designer icon">
-                    <h2>Graphic Design</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus veritatis debitis dolor! Asperiores adipisci quasi praesentium assumenda qui in tenetur.</p>
-                </div>
-                <div class="card">
-                    <img src="images/www.png" alt="web developer icon">
-                    <h2>Web development</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus veritatis debitis dolor! Asperiores adipisci quasi praesentium assumenda qui in tenetur.</p>
-                </div>
-                <div class="card">
-                    <img src="images/blogger.png" alt="blogger icon">
-                    <h2>Content Writing</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus veritatis debitis dolor! Asperiores adipisci quasi praesentium assumenda qui in tenetur.</p>
-                </div>
-            </div>
-        </div>
-    </section>
+    <div class="hero">
+        <h1>My Journey into Web Development</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit labore sed commodi, nulla unde itaque dignissimos placeat molestias qui soluta nam distinctio harum possimus ex eveniet delectus, fugiat inventore numquam! Doloremque ut, tempore, omnis, qui ipsum aut natus harum recusandae quam sapiente facere modi assumenda nam praesentium distinctio! Praesentium, exercitationem.
+        </p>
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae iusto consequuntur fuga, illo quo aliquam, ipsum ut ex repellendus mollitia voluptatem unde temporibus reiciendis fugit doloremque provident iure consequatur. Veniam expedita voluptates natus corrupti dolor provident sed hic, suscipit molestias!
+        </p>
+        <h2>Conclusion</h2>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque voluptatum velit deserunt similique expedita dicta commodi quia veniam! Inventore, consectetur?
+        </p>
+
+    </div>
     <script src="assets/script.js"></script>
 </body>
-</html>
