--- a/blog.html
+++ b/blog.html
@@ -35,19 +35,35 @@
             </nav>
         </div>
     </header>
-    <div class="hero">
-        <h1>My Journey into Web Development</h1>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit labore sed commodi, nulla unde itaque dignissimos placeat molestias qui soluta nam distinctio harum possimus ex eveniet delectus, fugiat inventore numquam! Doloremque ut, tempore, omnis, qui ipsum aut natus harum recusandae quam sapiente facere modi assumenda nam praesentium distinctio! Praesentium, exercitationem.
-        </p>
-        <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae iusto consequuntur fuga, illo quo aliquam, ipsum ut ex repellendus mollitia voluptatem unde temporibus reiciendis fugit doloremque provident iure consequatur. Veniam expedita voluptates natus corrupti dolor provident sed hic, suscipit molestias!
-        </p>
-        <h2>Conclusion</h2>
-        <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque voluptatum velit deserunt similique expedita dicta commodi quia veniam! Inventore, consectetur?
-        </p>
+    <div class="blog-ctn">
 
+        <div class="blog">
+            <h1>My Journey into Web Development</h1>
+            <div class="cover-img">
+                <img src="images/place_holder.png" alt="cover image">
+                <em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste dolorum.</em>
+            </div>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit labore sed commodi, nulla unde itaque dignissimos placeat molestias qui soluta nam distinctio harum possimus ex eveniet delectus, fugiat inventore numquam! Doloremque ut, tempore, omnis, qui ipsum aut natus harum recusandae quam sapiente facere modi assumenda nam praesentium distinctio! Praesentium, exercitationem.
+            </p>
+            <h2>Topic 1</h2>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae iusto consequuntur fuga, illo quo aliquam, ipsum ut ex repellendus mollitia voluptatem unde temporibus reiciendis fugit doloremque provident iure consequatur. Veniam expedita voluptates natus corrupti dolor provident sed hic, suscipit molestias!
+            </p>
+            <h2>Topic 2</h2>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae iusto consequuntur fuga, illo quo aliquam, ipsum ut ex repellendus mollitia voluptatem unde temporibus reiciendis fugit doloremque provident iure consequatur. Veniam expedita voluptates natus corrupti dolor provident sed hic, suscipit molestias! amet consectetur adipisicing elit. Neque voluptatum velit deserunt similique expedita dicta commodi quia veniam! Inventore
+            </p>
+            <h2>Topic 3</h2>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic possimus modi dignissimos illum, cum vitae vel cupiditate dolore alias fugit doloremque laboriosam culpa. Mollitia perspiciatis nobis numquam sapiente? Neque totam voluptatum dolores fuga possimus a velit. Corrupti odit earum sed eligendi, debitis impedit facilis doloribus praesentium neque adipisci quibusdam fuga ea quaerat reiciendis saepe nisi culpa totam voluptas asperiores recusandae.
+            </p>
+            <h2>Conclusion</h2>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque voluptatum velit deserunt similique expedita dicta commodi quia veniam! Inventore, consectetur?
+            </p>
+    
+        </div>
     </div>
     <script src="assets/script.js"></script>
 </body>
