formatted the appearance

--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
         <link rel="shortcut icon" href="images/head-icon.jpeg" type="image/x-icon">
         <title>Portfolio | Blog</title>
     </head>
-<body style="background: white; color: black;">
+<body style="background: #F5F5F4; color: black;">
     <header>
         <div class="container">
             
