--- a/about.html
+++ b/about.html
@@ -53,6 +53,9 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div>&copy; 2024 | Robert Ssekyene</div>
+    </footer>
     <script src="assets/script.js"></script>
 </body>
 </html>
