--- a/blog.html
+++ b/blog.html
@@ -65,5 +65,8 @@
     
         </div>
     </div>
+    <footer>
+        <div>&copy; 2024 | Robert Ssekyene</div>
+    </footer>
     <script src="assets/script.js"></script>
 </body>
