--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
             </div>
         </div>
     </div>
-
+    <footer>
+        <div>&copy; 2024 | Robert Ssekyene</div>
+    </footer>
+    
     <script src="assets/script.js"></script>
 </body>
 </html>
