implemented the contact modal

--- a/about.html
+++ b/about.html
@@ -29,12 +29,25 @@
                         <a href="./blog.html" class="nav-link">Blog</a>
                     </div>
                     <div class="right">
-                        <button class="btn btn-primary">Contact</button>
+                        <button class="btn btn-primary" id="contact-btn">Contact</button>
                     </div>
                 </div>
             </nav>
         </div>
     </header>
+    <!-- Contact Modal -->
+    <div id="contact-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn">&times;</span>
+            <h2>Contact Me</h2>
+            <a href="https://wa.me/+256755917055" class="contact-link" target="_blank">
+                WhatsApp/+256755917055
+            </a>
+            <a href="mailto:robertssekyene05@gmail.com" class="contact-link">
+                Email
+            </a>
+        </div>
+    </div>
     <section class="about">
         <div class="container hero flex items-centre">
             <div class="left justify-between">
