--- a/services.html
+++ b/services.html
@@ -29,16 +29,29 @@
                         <a href="./blog.html" class="nav-link">Blog</a>
                     </div>
                     <div class="right">
-                        <button class="btn btn-primary">Contact</button>
+                        <button class="btn btn-primary" id="contact-btn">Contact</button>
                     </div>
                 </div>
             </nav>
         </div>
     </header>
+    <!-- Contact Modal -->
+    <div id="contact-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn">&times;</span>
+            <h2>Contact Me</h2>
+            <a href="https://wa.me/+256755917055" class="contact-link" target="_blank">
+                WhatsApp/+256755917055
+            </a>
+            <a href="mailto:robertssekyene05@gmail.com" class="contact-link">
+                Email
+            </a>
+        </div>
+    </div>
     <section class="services">
         <div class="container" id="service-ctn">
             <h1 class="services-head">Services</h1>
-            <p>All your digital needs... covered.</p>
+            <p>Your digital needs... covered.</p>
             <div class="card-ctn flex">
                 <div class="card">
                     <img src="images/graphics.png" alt="graphic designer icon">
