--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
             
             <nav class="flex items-center justify-between">
                 <div class="logo">
-                    <img src="images/logo.jpg" alt="logo">
+                    <a href="/index.html"><img src="images/logo.jpg" alt="logo"></a>
                 </div>
                 <div class="menu-icon">
                     <span>&#9776;</span>
