--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             
             <nav class="flex items-center justify-between">
                 <div class="logo">
-                    <img src="images/logo.jpg" alt="logo">
+                    <a href="/index.html"><img src="images/logo.jpg" alt="logo"></a>
                 </div>
                 <div class="menu-icon">
                     <span>&#9776;</span>
@@ -57,7 +57,9 @@
             <h1>I'm a Web<br> <span>Developer</span></h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, consequatur atque sed rem nam beatae, quasi quis blanditiis quaerat quod. Labore, libero.</p>
             <div>
-                <button class="btn btn-secondary">DOWNLOAD RESUME</button>
+                <a href="/applying_for_small_grant.pdf" download="Resume.pdf">
+                    <button class="btn btn-secondary">DOWNLOAD RESUME</button>
+                </a>
             </div>
         </div>
     </div>
