--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h1>I'm a Web<br> <span>Developer</span></h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, consequatur atque sed rem nam beatae, quasi quis blanditiis quaerat quod. Labore, libero.</p>
             <div>
-                <a href="./resume_v1.pdfgit " download="SR_Resume.pdf">
+                <a href="./resume_v1.pdf" download="SR_resume.pdf">
                     <button class="btn btn-secondary">DOWNLOAD RESUME</button>
                 </a>
             </div>
