added more content

--- a/about.html
+++ b/about.html
@@ -55,8 +55,8 @@
             </div>
             <div class="right">
                 <h1>About <span>Me</span></h1>
-                <h3>Hello! I'm Ssekyene Robert.</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, est facilis, consectetur velit nulla explicabo, dicta voluptates illum et suscipit recusandae obcaecati ad modi! Tenetur ipsam, mollitia pariatur nostrum nobis incidunt dolores consequuntur recusandae voluptas ullam atque exercitationem similique delectus.</p>
+                <h3>Hello! there, I'm Ssekyene Robert.</h3>
+                <p>I’m a passionate Full-Stack Web Developer with junior level experience in modern web technologies and with a strong web development foundation that makes me have proficient analytical and problem solving skills. I specialize in creating seamless front-end user interfaces with Vanilla js, JQuery and CSS, and building robust back-end systems using python-flask and php-Laravel. I enjoy so much working with others when it comes to doing digital solutions and services for my clients! For a list of my services, checkout my <a href="./services.html" class="hero-link">services page</a> and for a sample of my projects, you may visit my github account with just a <a href="https://github.com/Ssekyene" class="hero-link">click</a> away.</p>
                 <div class="socials flex justify-between items-centre" >
                 <a href=""><img src="images/github.png" alt="website link" width="25px"></a>
                 <a href=""><img src="images/linkedin.png" alt="facebook link" width="25px"></a>
