--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="right flex-1">
             <h6>ROBERT SSEKYENE</h6>
             <h1>I'm a Web<br> <span>Developer</span></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, consequatur atque sed rem nam beatae, quasi quis blanditiis quaerat quod. Labore, libero.</p>
+            <p> I am dedicated to creating seamless, dynamic, and user-focused digital solutions. With a strong passion for innovation and continuous learning, I embrace modern tools and technologies to deliver impactful results. Click <a href="./about.html" class="hero-link">here</a> for more about me.</p>
             <div>
                 <a href="./resume_v1.pdf" download="SR_resume.pdf">
                     <button class="btn btn-secondary">DOWNLOAD RESUME</button>
