--- a/services.html
+++ b/services.html
@@ -54,8 +54,8 @@
             <p>Your digital needs... covered.</p>
             <div class="card-ctn flex">
                 <div class="card">
-                    <img src="images/graphics.png" alt="graphic designer icon">
-                    <h2>Graphic Design</h2>
+                    <img src="images/construction.png" alt="graphic designer icon">
+                    <h2>IT Support</h2>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus veritatis debitis dolor! Asperiores adipisci quasi praesentium assumenda qui in tenetur.</p>
                 </div>
                 <div class="card">
@@ -66,6 +66,11 @@
                 <div class="card">
                     <img src="images/blogger.png" alt="blogger icon">
                     <h2>Content Writing</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus veritatis debitis dolor! Asperiores adipisci quasi praesentium assumenda qui in tenetur.</p>
+                </div>
+                <div class="card">
+                    <img src="images/help.png" alt="blogger icon">
+                    <h2>Technical Consultation</h2>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus veritatis debitis dolor! Asperiores adipisci quasi praesentium assumenda qui in tenetur.</p>
                 </div>
             </div>
