added services content

--- a/services.html
+++ b/services.html
@@ -56,22 +56,22 @@
                 <div class="card">
                     <img src="images/construction.png" alt="graphic designer icon">
                     <h2>IT Support</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus veritatis debitis dolor! Asperiores adipisci quasi praesentium assumenda qui in tenetur.</p>
+                    <p>Delivering reliable IT support to ensure your systems run smoothly and efficiently. From troubleshooting hardware and software issues to implementing robust security measures, I provide solutions that keep your technology infrastructure optimized and secure.</p>
                 </div>
                 <div class="card">
                     <img src="images/www.png" alt="web developer icon">
                     <h2>Web development</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus veritatis debitis dolor! Asperiores adipisci quasi praesentium assumenda qui in tenetur.</p>
+                    <p>Creating dynamic, responsive websites tailored to your needs. Whether it’s a personal portfolio, a blog website, or a business website, I specialize in building scalable, user-friendly solutions using modern frameworks and technologies.</p>
                 </div>
                 <div class="card">
                     <img src="images/blogger.png" alt="blogger icon">
                     <h2>Content Writing</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus veritatis debitis dolor! Asperiores adipisci quasi praesentium assumenda qui in tenetur.</p>
+                    <p>Crafting engaging, informative, and SEO-optimized content for your digital platforms. From technical blogs to website copy, I ensure your message resonates with your audience and drives results.</p>
                 </div>
                 <div class="card">
                     <img src="images/help.png" alt="blogger icon">
                     <h2>Technical Consultation</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus veritatis debitis dolor! Asperiores adipisci quasi praesentium assumenda qui in tenetur.</p>
+                    <p>Offering expert advice to help you navigate complex technical challenges. Whether you’re seeking for web development mentorship, planning a new project, upgrading your systems or troubleshooting software and hardware problems, I provide actionable insights to streamline your processes and achieve your goals.</p>
                 </div>
             </div>
         </div>
