--- a/about.html
+++ b/about.html
@@ -58,10 +58,10 @@
                 <h3>Hello! there, I'm Ssekyene Robert.</h3>
                 <p>I’m a passionate Full-Stack Web Developer with junior level experience in modern web technologies and with a strong web development foundation that makes me have proficient analytical and problem solving skills. I specialize in creating seamless front-end user interfaces with Vanilla js, JQuery and CSS, and building robust back-end systems using python-flask and php-Laravel. I enjoy so much working with others when it comes to doing digital solutions and services for my clients! For a list of my services, checkout my <a href="./services.html" class="hero-link">services page</a> and for a sample of my projects, you may visit my github account with just a <a href="https://github.com/Ssekyene" class="hero-link">click</a> away.</p>
                 <div class="socials flex justify-between items-centre" >
-                <a href=""><img src="images/github.png" alt="website link" width="25px"></a>
-                <a href=""><img src="images/linkedin.png" alt="facebook link" width="25px"></a>
-                <a href=""><img src="images/twitter-alt.png" alt="instagram link" width="25px"></a>
-                <a href=""><img src="images/facebook.png" alt="youtube link" width="25px"></a>
+                <a href="https://github.com/Ssekyene" target="_blank" rel="noopener noreferrer"><img src="images/github.png" alt="github link" width="25px"></a>
+                <a href="https://www.linkedin.com/in/robertssekyene/" target="_blank" rel="noopener noreferrer"><img src="images/linkedin.png" alt="linkedin link" width="25px"></a>
+                <a href="https://x.com/robkj256" target="_blank" rel="noopener noreferrer"><img src="images/twitter-alt.png" alt="twitter link" width="25px"></a>
+                <a href="https://www.facebook.com/profile.php?id=100072502421414" target="_blank" rel="noopener noreferrer"><img src="images/facebook.png" alt="facebook link" width="25px"></a>
                 </div>
             </div>
         </div>
