made modification of the resume button as well changed the blog img

--- a/blog.html
+++ b/blog.html
@@ -51,10 +51,10 @@
     <div class="blog-ctn">
 
         <div class="blog">
-            <h1>My Journey into Web Development</h1>
+            <h1>My Journey into Web Development | IT</h1>
             <div class="cover-img">
-                <img src="images/place_holder.png" alt="cover image">
-                <em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste dolorum.</em>
+                <img src="images/coding.jpg" alt="cover image">
+                <em>A Terminal illustrating how complex and interesting programming may be.</em>
             </div>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit labore sed commodi, nulla unde itaque dignissimos placeat molestias qui soluta nam distinctio harum possimus ex eveniet delectus, fugiat inventore numquam! Doloremque ut, tempore, omnis, qui ipsum aut natus harum recusandae quam sapiente facere modi assumenda nam praesentium distinctio! Praesentium, exercitationem.
