--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             <h1>I'm a Web<br> <span>Developer</span></h1>
             <p> I am dedicated to creating seamless, dynamic, and user-focused digital solutions. With a strong passion for innovation and continuous learning, I embrace modern tools and technologies to deliver impactful results. Click <a href="./about.html" class="hero-link">here</a> for more about me.</p>
             <div>
-                <a href="./resume_v1.pdf" download="SR_resume.pdf">
-                    <button class="btn btn-secondary">DOWNLOAD RESUME</button>
+                <a href="./resume_v1.pdf" target="_blank" rel="noopener noreferrer">
+                    <button class="btn btn-secondary">VIEW RESUME</button>
                 </a>
             </div>
         </div>
