added blog content

--- a/blog.html
+++ b/blog.html
@@ -57,23 +57,30 @@
                 <em>A Terminal illustrating how complex and interesting programming may be.</em>
             </div>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit labore sed commodi, nulla unde itaque dignissimos placeat molestias qui soluta nam distinctio harum possimus ex eveniet delectus, fugiat inventore numquam! Doloremque ut, tempore, omnis, qui ipsum aut natus harum recusandae quam sapiente facere modi assumenda nam praesentium distinctio! Praesentium, exercitationem.
+                My journey into web development and IT in general started when I was in my second year at university. I was pursuing a degree in Information Technology and Computing and I had just completed my first year. I had always been fascinated by the idea of creating something out of the mathematical concepts that I learnt all away from high school. I had always been a curious person and I always wanted to know how things worked. This blog shares some of the experience I have so far encounted as I move on to doing better.
             </p>
-            <h2>Topic 1</h2>
+            <h2>Before Diving into IT</h2>
             <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae iusto consequuntur fuga, illo quo aliquam, ipsum ut ex repellendus mollitia voluptatem unde temporibus reiciendis fugit doloremque provident iure consequatur. Veniam expedita voluptates natus corrupti dolor provident sed hic, suscipit molestias!
+                Of course, before diving into IT/programming/Web development, I had my little IT knowledge. At least I could use Microsoft applications like Word, Excel, Powerpoint and Access. I could also use the internet to search for some information and also use social media platforms like facebook. I had not done much beyond mentioned apart from playing some mobile and play station games. This is also IT right? Yes, it is because it's all digital (just 0's and 1's). I was also so much passionate about learning and doing mathematics and physics problems and I used to get some good grades to be honest. So from my small background history, it clearly shows that at least I didn't start from scratch, It was just a matter of becoming more specific and advanced.
             </p>
-            <h2>Topic 2</h2>
+            <h2>The Zero Days of Programming</h2>
             <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae iusto consequuntur fuga, illo quo aliquam, ipsum ut ex repellendus mollitia voluptatem unde temporibus reiciendis fugit doloremque provident iure consequatur. Veniam expedita voluptates natus corrupti dolor provident sed hic, suscipit molestias! amet consectetur adipisicing elit. Neque voluptatum velit deserunt similique expedita dicta commodi quia veniam! Inventore
+                I remember the first time I wrote my first line of Code, It was in C language. The code was copied from the lecture who wrote it on the board. Apart from things seeming to be so strange, less meaningful and less applicable in real world, the snippet of codes I did those days were kinda boring to me due to my high expectations of building my facebook straight away and become a young billionare! Little did I know that programming was too beyound pressing keys on the keyboard.<br><br>
+                Like any other technical and professional field, a lot of resilience and discipline all backed up with passion and motivation was needed to get me far along the journey. With time, I could say I'm among the luckiest to understand that till date. Never did I earlier know that one day am to be a programmer like guys we see using Linux in movies and series. I was so much excited to see myself doing some cool stuff like them and so am grateful to God for the little far I have come.
             </p>
-            <h2>Topic 3</h2>
+            <h2>Learning Hacks</h2>
             <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic possimus modi dignissimos illum, cum vitae vel cupiditate dolore alias fugit doloremque laboriosam culpa. Mollitia perspiciatis nobis numquam sapiente? Neque totam voluptatum dolores fuga possimus a velit. Corrupti odit earum sed eligendi, debitis impedit facilis doloribus praesentium neque adipisci quibusdam fuga ea quaerat reiciendis saepe nisi culpa totam voluptas asperiores recusandae.
+                One of the things I had and still have in my mindset is to never despise embracing mathematics as a necessity to doing better in programming/coding. This doesn't mean that one has to focus on memorizing Math concepts, rather understanding the concepts and translate them into code as well as using the logic obtained to solve some of the coding challenges. This added a lot to my learning curve and I could see myself doing better in coding and programming. I also needed a faster and advanced approach of learing and so I took follow up of project based courses such as the <a href="https://www.alxafrica.com/programmes/" target="_blank">ALX programs</a> that not only prepared me for real world problems but also provided me a community of fellow developers which all improved my skillsets and knowledge in the field of IT.
             </p>
-            <h2>Conclusion</h2>
+            <h2>Overcoming Challenges</h2>
             <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque voluptatum velit deserunt similique expedita dicta commodi quia veniam! Inventore, consectetur?
+                The journey wasn’t without its hurdles. Debugging code, understanding complex concepts, and staying updated with ever-evolving technologies were challenging. However, each obstacle taught me resilience and problem-solving skills. Joining developer communities and collaborating on projects helped me gain confidence and refine my skills.
+            </p>
+            <h2>The Path Forward</h2>
+            <p>
+                As I reflect on my journey so far, I recognize that web development is an ever-evolving field with endless opportunities to learn and grow. My focus moving forward is to deepen my expertise in modern frameworks like React and Laravel, while also exploring emerging technologies like AI integration and progressive web apps (PWAs).<br><br>
+                Additionally, I aim to collaborate on open-source projects, contribute to the developer community, and refine my ability to create scalable, user-centric applications. By staying curious and embracing challenges, I’m committed to continuously improving my skills and delivering impactful solutions in the digital space.<br><br>
+                The journey doesn’t end here—it’s just the beginning of a lifelong pursuit of innovation and creativity in the world of web development.
             </p>
     
         </div>
