--- a/blog.html
+++ b/blog.html
@@ -86,7 +86,7 @@
         </div>
     </div>
     <footer>
-        <div>&copy; 2024 | Robert Ssekyene</div>
+        <div>&copy; 2024 - Present | Robert Ssekyene</div>
     </footer>
     <script src="assets/script.js"></script>
 </body>
