--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
     </div>
     <footer>
-        <div>&copy; 2024 | Robert Ssekyene</div>
+        <div>&copy; 2024 - Present | Robert Ssekyene</div>
     </footer>
 
     <script src="assets/script.js"></script>
