--- a/services.html
+++ b/services.html
@@ -77,7 +77,7 @@
         </div>
     </section>
     <footer>
-        <div>&copy; 2024 | Robert Ssekyene</div>
+        <div>&copy; 2024 - Present | Robert Ssekyene</div>
     </footer>
     <script src="assets/script.js"></script>
 </body>
